# LabDeviceWorkstationDemo

./: .gitignore  README.md  README_zh.md  pyproject.toml  requirements.txt
.github/workflows/: check_registry.yml
device_package_example/: __init__.py  counting_device.py
graph/: workstation_demo.json
workstation_demo/: __init__.py  demo_workstation.py  echo_reader.py  mock_modbus_bus.py  mock_serial.py  modbus_sensor.py
