[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workstation_demo"
version = "0.1.0"
description = "Uni-Lab-OS 工作站演示设备包：hardware_interface 代理共享通信端点 (串口 + Modbus/extra_info)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["unilabos"]

[tool.setuptools.packages.find]
include = ["workstation_demo*"]
